--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
+  "engines": {
+    "node": "12.16.3"
+  },
   "name": "project_2",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "nodemon"
   },
   "keywords": [],
   "author": "",
