--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
   "dependencies": {
     "express": "^4.17.1",
     "method-override": "^3.0.0",
-    "mongoose": "^5.9.15"
+    "mongoose": "^5.9.15",
+    "react": "^16.13.1",
+    "react-views": "^1.0.4",
+    "styled-css-grid": "^1.2.1"
   }
 }
