--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "bcryptjs": "^2.4.3",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-react-views": "^0.11.0",
     "express-session": "^1.17.1",
     "method-override": "^3.0.0",
     "mongoose": "^5.9.15",
